fix: styleguide and assets configuration

--- a/app/views/styleguide/04_Buttons & Links/_4_tertiary-buttons.html.haml
+++ b/app/views/styleguide/04_Buttons & Links/_4_tertiary-buttons.html.haml
@@ -10,8 +10,8 @@
       'active' => 'Active tag button',
       'block' => 'Tertiary button that takes the whole width',
       'small' => 'Small tertiary button',
-      'large' => 'Large tertiary button'
-      # TODO: '.disabled'?
+      'large' => 'Large tertiary button',
+      'disabled' => 'Disabled tertiary button'
     }
   }
 
