--- a/app/views/styleguide/04_Buttons & Links/_5_extended-buttons.html.haml
+++ b/app/views/styleguide/04_Buttons & Links/_5_extended-buttons.html.haml
@@ -10,8 +10,8 @@
       'large' => 'Large extended button',
       'block' => 'Block extended button',
       'block small' => 'Block extended button',
-      'block large' => 'Block extended button'
-      # TODO: '.disabled'?
+      'block large' => 'Block extended button',
+      'disabled' => 'Disabled extended button'
     }
   }
 
