--- a/app/views/styleguide/07_Components/_17_thumb-catalog.html.haml
+++ b/app/views/styleguide/07_Components/_17_thumb-catalog.html.haml
@@ -16,7 +16,7 @@
           .ui-thumbnail-table-image-holder
             .ui-thumbnail-cell-image-holder
               .ui-thumbnail-inner-image-holder
-                %img.ui-thumbnail-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-7.jpeg')}/
+                %img.ui-thumbnail-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-7.jpg')}/
       .ui-thumbnail-meta
         %h3.ui-thumbnail-meta-title Name that can easily go onto 2 lines so lets try make it so shall we.
         %p.ui-thumbnail-meta-subtitle Author that can easily go onto 2 lines as well so how about seeing how it works then?
