--- a/app/views/styleguide/07_Components/_19_thumb.html.haml
+++ b/app/views/styleguide/07_Components/_19_thumb.html.haml
@@ -1,5 +1,3 @@
--# TODO: js; hover
-
 :ruby
   element = {
     name: 'Default thumbnail style, independent from visualization mode',
@@ -11,7 +9,7 @@
     examples: [
       {
         locals: {
-          picture: asset_path('styleguide/media-entry-4.jpeg'),
+          picture: asset_path('styleguide/media-entry-4.jpg'),
           href: nil, # optional
           # NOTE: last 2 classes not really needed, but present before
           mods: ['media-entry', 'video', 'ui-resource-thumbnail', 'pan'],
