--- a/app/views/styleguide/08_Combos/_06_clipboard.html.haml
+++ b/app/views/styleguide/08_Combos/_06_clipboard.html.haml
@@ -26,7 +26,7 @@
                       .ui-thumbnail-table-image-holder
                         .ui-thumbnail-cell-image-holder
                           .ui-thumbnail-inner-image-holder
-                            %img.ui-thumbnail-image{:src => asset_path("styleguide/media-entry-6.jpeg")}/
+                            %img.ui-thumbnail-image{:src => asset_path("styleguide/media-entry-6.jpg")}/
               .ui-resource-clipboard-remove{:title => "Aus der Zwischenablage entfernen"}
                 .icon-remove.bright
           %p.ui-clipboard-alert.ui-clipboard-empty-alert{:style => "display: none;"}
