--- a/app/views/styleguide/08_Combos/_08_1_collage.html.haml
+++ b/app/views/styleguide/08_Combos/_08_1_collage.html.haml
@@ -13,19 +13,19 @@
       .ui-collage-row
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
         .ui-collage-item.even
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-5", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-5", :src => asset_path('styleguide/media-entry-5.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
         .ui-collage-item.even
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-7", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-7", :src => asset_path('styleguide/media-entry-8.jpg')}/
       .ui-collage-row
         .ui-collage-item.odd
           .ui-collage-item-wrapper
@@ -35,42 +35,42 @@
             %img.ui-collage-item-image{:alt => "Media-entry-2", :src => asset_path('styleguide/media-entry-2.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
         .ui-collage-item.even
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
       .ui-collage-row
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
         .ui-collage-item.even
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-7", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-7", :src => asset_path('styleguide/media-entry-8.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
         .ui-collage-item.even
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-7", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-7", :src => asset_path('styleguide/media-entry-8.jpg')}/
       .ui-collage-row
         .ui-collage-item.odd
           .ui-collage-item-wrapper
             %img.ui-collage-item-image{:alt => "Media-entry-1", :src => asset_path('styleguide/media-entry-1.jpg')}/
         .ui-collage-item.even
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
         .ui-collage-item.even
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
         .ui-collage-item.odd
           .ui-collage-item-wrapper
-            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+            %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
