--- a/app/views/styleguide/08_Combos/_08_2_collage.html.haml
+++ b/app/views/styleguide/08_Combos/_08_2_collage.html.haml
@@ -16,7 +16,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Präsentation
               %h4.title-xs-alt
@@ -25,7 +25,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-3.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Mein Erstes Photo (mit der neuen Nikon)
               %h4.title-xs-alt
@@ -34,7 +34,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-5.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Präsentation
               %h4.title-xs-alt
@@ -43,7 +43,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Mein Erstes Photo (mit der neuen Nikon)
               %h4.title-xs-alt
@@ -52,7 +52,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-8.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Präsentation
               %h4.title-xs-alt
@@ -62,7 +62,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-6.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Mein Erstes Photo (mit der neuen Nikon)
               %h4.title-xs-alt
@@ -71,7 +71,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-8.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Präsentation
               %h4.title-xs-alt
@@ -80,7 +80,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Mein Erstes Photo (mit der neuen Nikon)
               %h4.title-xs-alt
@@ -89,7 +89,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-5.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Präsentation
               %h4.title-xs-alt
@@ -98,7 +98,7 @@
             .ui-collage-item-table
               .ui-collage-item-cell
                 .ui-collage-item-inner
-                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                  %img.ui-collage-item-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
             .ui-collage-item-meta
               %h3.title-xs Mein Erstes Photo (mit der neuen Nikon)
               %h4.title-xs-alt
