--- a/app/views/styleguide/08_Combos/_09_3_resources-list.html.haml
+++ b/app/views/styleguide/08_Combos/_09_3_resources-list.html.haml
@@ -34,11 +34,11 @@
                     %li.ui-thumbnail-level-item.odd
                       %a.ui-level-image-wrapper{:href => "#", :title => "Set name"}
                         .ui-thumbnail-level-image-holder
-                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
                     %li.ui-thumbnail-level-item.even
                       %a.ui-level-image-wrapper{:href => "#", :title => "Set name"}
                         .ui-thumbnail-level-image-holder
-                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
                   %span.ui-thumbnail-level-notes 5 Inhalte
                 .ui-thumbnail-privacy
                   = component('icon.privacy-group', title: 'This media is shared with a group')
@@ -47,7 +47,7 @@
                     .ui-thumbnail-table-image-holder
                       .ui-thumbnail-cell-image-holder
                         .ui-thumbnail-inner-image-holder
-                          %img.ui-thumbnail-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                          %img.ui-thumbnail-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-thumbnail-meta
                   %h3.ui-thumbnail-meta-title Name that can easily go onto 2 lines
                   %h4.ui-thumbnail-meta-subtitle Author that can easily go onto 2 lines as well
@@ -86,11 +86,11 @@
                     %li.ui-thumbnail-level-item.odd
                       %a.ui-level-image-wrapper{:href => "#", :title => "Set name"}
                         .ui-thumbnail-level-image-holder
-                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
                     %li.ui-thumbnail-level-item.even
                       %a.ui-level-image-wrapper{:href => "#", :title => "Set name"}
                         .ui-thumbnail-level-image-holder
-                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                          %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
                   %span.ui-thumbnail-level-notes 5 Inhalte
             .ui-resource-meta
               %table.borderless.block
@@ -186,7 +186,7 @@
                     .ui-thumbnail-table-image-holder
                       .ui-thumbnail-cell-image-holder
                         .ui-thumbnail-inner-image-holder
-                          %img.ui-thumbnail-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                          %img.ui-thumbnail-image{:alt => "Media-entry-4", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-thumbnail-meta
                   %h3.ui-thumbnail-meta-title Name that can easily go onto 2 lines
                   %h4.ui-thumbnail-meta-subtitle Author that can easily go onto 2 lines as well
@@ -313,7 +313,7 @@
                     .ui-thumbnail-table-image-holder
                       .ui-thumbnail-cell-image-holder
                         .ui-thumbnail-inner-image-holder
-                          %img.ui-thumbnail-image{:alt => "Media-entry-5", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                          %img.ui-thumbnail-image{:alt => "Media-entry-5", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-thumbnail-meta
                   %h3.ui-thumbnail-meta-title Name that can easily go onto 2 lines
                   %h4.ui-thumbnail-meta-subtitle Author that can easily go onto 2 lines as well
