--- a/app/views/styleguide/08_Combos/_09_4_resources-tiles.html.haml
+++ b/app/views/styleguide/08_Combos/_09_4_resources-tiles.html.haml
@@ -104,7 +104,7 @@
                         = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -132,7 +132,7 @@
                         = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -160,7 +160,7 @@
                         = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -188,7 +188,7 @@
                         = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -217,7 +217,7 @@
                         = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
