--- a/app/views/styleguide/08_Combos/_16_resources-table.html.haml
+++ b/app/views/styleguide/08_Combos/_16_resources-table.html.haml
@@ -53,7 +53,7 @@
             %td.ui-resources-table-selection
               %label
                 %input{:type => "checkbox"}/
-                %img.ui-thumbnail.micro{:alt => "ZHdK", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                %img.ui-thumbnail.micro{:alt => "ZHdK", :src => asset_path('styleguide/media-entry-3.jpg')}/
             %td File Title
             %td Pinco Pallino
             %td 20.02.2010
