--- a/app/views/styleguide/08_Combos/_08_2_set-overview.html.haml
+++ b/app/views/styleguide/08_Combos/_08_2_set-overview.html.haml
@@ -21,7 +21,7 @@
               .ui-thumbnail-table-image-holder
                 .ui-thumbnail-cell-image-holder
                   .ui-thumbnail-inner-image-holder
-                    %img.ui-thumbnail-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-thumbnail-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
           .ui-thumbnail-meta
             %h3.ui-thumbnail-meta-title Name that can easily go onto 2 lines
             %h4.ui-thumbnail-meta-subtitle Author that can easily go onto 2 lines as well
@@ -55,11 +55,11 @@
               %li.ui-thumbnail-level-item.odd
                 %a.ui-level-image-wrapper{:href => "#", :title => "Set name"}
                   .ui-thumbnail-level-image-holder
-                    %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
               %li.ui-thumbnail-level-item.even
                 %a.ui-level-image-wrapper{:href => "#", :title => "Set name"}
                   .ui-thumbnail-level-image-holder
-                    %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpg')}/
             %span.ui-thumbnail-level-notes 5 Inhalte
       .ui-metadata-box.ui-summary-table.ui-set-summary
         %table.borderless
