--- a/app/views/styleguide/08_Combos/_10_featured-entries.html.haml
+++ b/app/views/styleguide/08_Combos/_10_featured-entries.html.haml
@@ -15,7 +15,6 @@
 = render_partial('element', element) do
   - element[:mods].each do |name, description|
     = render_partial('example', { mod: name}) do
-      TODO: Example!!!
 
       %ul.ui-resources.tiles.vertical
         %li.ui-resources-page
@@ -46,7 +45,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -56,7 +55,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -66,7 +65,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -76,7 +75,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -87,7 +86,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -135,7 +134,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -145,7 +144,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -155,7 +154,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -165,7 +164,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -176,7 +175,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -224,7 +223,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -234,7 +233,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -244,7 +243,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -254,7 +253,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -265,7 +264,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -313,7 +312,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -323,7 +322,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -333,7 +332,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -343,7 +342,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -354,7 +353,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -402,7 +401,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -412,7 +411,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -422,7 +421,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -432,7 +431,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -443,7 +442,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -491,7 +490,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -501,7 +500,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -511,7 +510,7 @@
               .ui-tile
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -521,7 +520,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
@@ -532,7 +531,7 @@
               .ui-tile.ui-tile--set
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
-                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
+                    %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpg')}/
                 .ui-tile__foot
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
