chore: remove useless codetags (`TODO` etc.)

--- a/app/assets/stylesheets/components/_ui-body-sidebar.sass
+++ b/app/assets/stylesheets/components/_ui-body-sidebar.sass
@@ -9,7 +9,7 @@
   // clip meta-data in the sidebar (no overflow when to big)
   .ui-metadata-box dl,
   .ui-metadata-box dl > *
-    width: 170px   /* TODO: variables */
+    width: 170px
     overflow: hidden
 
   .ui-fadeout-right
