--- a/app/ui_elements/decorators/thumbnails/collection_index.haml
+++ b/app/ui_elements/decorators/thumbnails/collection_index.haml
@@ -8,8 +8,7 @@
     href: get.url,
     picture: get.image_url,
     meta: {
-      title: get.title#,
-      # subtitle: 'TODO'
+      title: get.title
     },
     badge_top_left: deco('privacy-status-icon', get: get)
   }
