--- a/app/ui_elements/decorators/thumbnails/media_entry_index.haml
+++ b/app/ui_elements/decorators/thumbnails/media_entry_index.haml
@@ -3,7 +3,7 @@
   fail 'No Presenter!' unless get.is_a?(Presenter)
 
   thumb = {
-    mods: ['media-entry'], # TODO : type of entry ('video')
+    mods: ['media-entry'],
     title: get.title,
     picture: get.image_url,
     href: get.url,
