--- a/app/views/application/root.html.erb
+++ b/app/views/application/root.html.erb
@@ -1,10 +1,10 @@
-<%=
-
-react(
-  'Views.explore.ExploreLoginPage',
-  get: @get,
-  returnTo: request.original_fullpath,
-  lang: I18n.locale
-)
-
-%>
+<% cache [@get.hash] do %>
+  <%=
+    react(
+      'Views.explore.ExploreLoginPage',
+      get: @get,
+      returnTo: request.original_fullpath,
+      lang: I18n.locale
+    )
+  %>
+<% end %>
